tests/error/modifier_errors/loop_control_found.err
Error: Unexpected loop control (at $FILE:8:12)
  | 
6 |     for i in range(123):
7 |         with dagger:
8 |             continue
  |             ^^^^^^^^ Continue found in a with block

Guppy compilation failed due to 1 previous error
